--- a/Public/admin/admin.css
+++ b/Public/admin/admin.css
@@ -255,3 +255,25 @@ td button:hover {
   box-shadow: 0 0 10px rgba(243, 156, 18, 0.8) !important;
   z-index: 10;
 }
+
+.hidden {
+  display: none;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  background: white;
+}
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
+}
+
+th {
+  background-color: #2c3e50;
+  color: white;
+}
