--- a/Public/admin/admin.css
+++ b/Public/admin/admin.css
@@ -45,7 +45,7 @@ h2 {
 
 #welcomeText {
   font-weight: 600;
-  font-size: 18px;
+  font-size: 26px;
   color: #2c3e50;
 }
 
@@ -193,6 +193,14 @@ tbody tr:hover {
   width: 300px;
 }
 
+.search1 {
+  margin-bottom: 15px;
+}
+
+#searchInput1 {
+  width: 300px;
+}
+
 /* ===== STATUS BADGES ===== */
 .status {
   padding: 6px 12px;
@@ -289,4 +297,64 @@ tbody tr:hover {
   color: white;
   font-weight: bold;
   border: 2px solid #000;
+}
+
+.calendar-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hidden {
+  display: none;
+}
+
+.calendar-modal {
+  background: white;
+  padding: 20px;
+  width: 80%;
+  max-height: 90%;
+  overflow-y: auto;
+  border-radius: 10px;
+}
+
+.calendar-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 5px;
+}
+
+.day-box {
+  padding: 10px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.present {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.leave {
+  background-color: #FFC107;
+}
+
+.saturday {
+  background-color: #90CAF9;
+}
+
+.sunday {
+  background-color: #F44336;
+  color: white;
+}
+
+.absent {
+  background-color: #E0E0E0;
+  border: 1px solid #ccc;
 }
